ACE/testing/overlays/dev/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
spec:
  selector:
    matchLabels:
      app: trigger-react
  template:
    metadata:
      labels:
        app: trigger-react
    spec:
      containers:
      - name: tekton-pod
        image: usmanasim11/cicd:react-app-cc9b274abd7d7c2d8f598df7313475a3ddde76de
        ports:
        - containerPort: 3000
