ACE/testing/overlays/dev/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
spec:
  selector:
    matchLabels:
      app: trigger-react
  template:
    metadata:
      labels:
        app: trigger-react
    spec:
      containers:
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
