ACE/testing/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactapp-svc
spec:
  selector:
    app: trigger-react
  ports:
  - port: 3000
    protocol: TCP
